--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,15 @@
-<html>
-    <head>
-        <meta charset='UTF-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <title>Home</title>
-    </head>
-    <body>
-        <h1>Avaliação contínua: Aula 030</h1>
-        <nav>
-            <ul>
-                <li><a href='/'>Home</a></li>
-                <li><a href='/user/Bruno%20Otero/PT3025535/IFSP'>Identificação</a></li>
-                <li><a href='/contextorequisicao'>Contexto da requisição</a></li>
-            </ul>
-        </nav>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block page_content %}
+    <div class='page-header'>
+        {% if username %}
+            <h1>Hello, {{ username }}!</h1>
+        {% else %}
+            <h1>Hello World!</h1>
+        {% endif %}
+    </div>
+    {% if current_time %}
+        <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+        <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+    {% endif %}
+{% endblock %}
