--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,13 @@
                     <span class='icon-bar'></span>
                     <span class='icon-bar'></span>
                 </button>
-                <a class='navbar-brand' href='/'>Flasky</a>
+                <a class='navbar-brand' href='/'>Avaliação contínua: <b>Aula 040</b></a>
             </div>
-            <div class='navbar-collapse collapse'>
-                <ul class='nav navbar-nav'>
-                    <li><a href='/'>Home</a></li>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/user/Bruno Otero/PT3025535/IFSP">Identificação</a></li>
+                    <li><a href="/contextorequisicao/Bruno Otero">Contexto da requisição</a></li>
                 </ul>
             </div>
         </div>
