--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         {% if username %}
             <h1>Hello, {{ username }}!</h1>
         {% else %}
-            <h1>Hello World!</h1>
+            <h1>Dados da última atualização:</h1>
         {% endif %}
     </div>
     {% if current_time %}
