--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,11 @@
 
 {% block title %}Flasky{% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+{% endblock %}
+
 {% block scripts %}
     {{ super() }}
     {{ moment.include_moment() }}
@@ -17,13 +22,11 @@
                     <span class='icon-bar'></span>
                     <span class='icon-bar'></span>
                 </button>
-                <a class='navbar-brand' href='/'>Avaliação contínua: <b>Aula 040</b></a>
+                <a class='navbar-brand' href='/'>Avaliação contínua: <b>Aula 050</b></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/user/Bruno Otero/PT3025535/IFSP">Identificação</a></li>
-                    <li><a href="/contextorequisicao/Bruno Otero">Contexto da requisição</a></li>
                 </ul>
             </div>
         </div>
