--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,18 @@
 
 {% block page_content %}
 <div class="page-header">
-  <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif%}!</h1>
+  <h1>Olá, {% if name %}{{ name }}{% else %}Estranho{% endif%}!</h1>
+  <h3>A sua Insituição de ensino é {% if institution %} {{ institution }} {% else %} None {% endif %}</h3>
+  <h3>Está cursando a disciplina de {% if subject  %} {{ subject }} {% endif %}</h3>
+  <br>
+  <h4>O IP do computador remoto é: {% if remote_ip %} {{ remote_ip }} {% else %} None {% endif %}</h4>
+  <h4>O host da aplicação é: {% if application_host %} {{ application_host }} {% else %} None {% endif %}</h4>
 </div>
 {{ wtf.quick_form(form) }}
+{% if current_time %}
+    <br>
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}.</p>
+{% endif %}
 {% endblock %}
 
